front-end for home page

--- a/components/footer.pug
+++ b/components/footer.pug
@@ -1,1 +1,18 @@
-h3 footer yaa
+footer
+    .footer__logo
+    .footer__partners-container
+        p.footer__partners-heading grace travel <br/>agency partners
+        .footer__partners-links-container
+            .partners-links__row
+                a(href="#") Club Med
+                a(href="#") Korean Air
+            .partners-links__row
+                a(href="#") Bangkok Hospital
+                a(href="#") Bangkok Air
+    .footer__general-links
+        a(href="#") About
+        a(href="#") Contact Us
+        a(href="#") Tours
+    p.footer__copyright. 
+        Grace Travel Agnecy is not responsible for content on external Websites. <br/> 
+        Copyright 2019 Grace Travel Agency. All rights reserved.
