--- a/index.pug
+++ b/index.pug
@@ -7,6 +7,7 @@ html(lang="en")
         title Tours by Grace Brunei
         link(rel="stylesheet" href="main.css")
     body
-        include components/nav
-        include pages/home
-        include components/footer
+        .mobile-container
+            include components/nav
+            include pages/home
+            include components/footer
