--- a/pages/home.pug
+++ b/pages/home.pug
@@ -1,1 +1,18 @@
-h1 home page
+header.home__container
+    .home__hero-container
+        h1. 
+            Grace <br/>
+            Travel <br/>
+            Agnecy <br/>
+            Tours
+        .home__hero-logo  
+    p.home__tagline.
+        You are on your way to booking a tour! <br/>
+        Please fill in the details below
+    .home__input-container
+        input(type="number", name="adults", placeholder="How many adults?")
+        input(type="number", name="children", placeholder="How many children?")
+        input(type="number", name="days", placeholder="How many days?")
+
+    .center-button
+        button(onClick="#") view tours
