front-end: results

--- a/components/footer.pug
+++ b/components/footer.pug
@@ -4,15 +4,15 @@ footer
         p.footer__partners-heading grace travel <br/>agency partners
         .footer__partners-links-container
             .partners-links__row
-                a(href="#") Club Med
-                a(href="#") Korean Air
+                a(href="http://www.gracebrunei.com/clubmed/") Club Med
+                a(href="http://www.gracebrunei.com/koreanair/") Korean Air
             .partners-links__row
-                a(href="#") Bangkok Hospital
-                a(href="#") Bangkok Air
+                a(href="http://www.gracebrunei.com/bangkokhospital/") Bangkok Hospital
+                a(href="http://www.gracebrunei.com/bangkokairways/") Bangkok Air
     .footer__general-links
-        a(href="#") About
+        a(href="http://www.gracebrunei.com/aboutus/") About
         a(href="#") Contact Us
-        a(href="#") Tours
+        a(href="http://www.gracebrunei.com/tours/") Tours
     p.footer__copyright. 
         Grace Travel Agnecy is not responsible for content on external Websites. <br/> 
         Copyright 2019 Grace Travel Agency. All rights reserved.
