front-end: details page until highlights

--- a/style/main.sass
+++ b/style/main.sass
@@ -172,7 +172,7 @@ footer
     text-align: center
 
 // results
-.results__heading
+.capitalize__heading
     margin-bottom: 5px
     text-transform: capitalize
 
@@ -223,5 +223,95 @@ footer
     position: absolute
     top: 0
 
+
+// details
+.details__big-image
+    position: absolute
+    left: 0
+    right: 0
+    height: 240px
+
+.details-tagline
+    margin-bottom: 20px
+
+.details__dots-container
+    margin-top: 300px
+    margin-bottom: 30px 
+
+.dots__titles
+    display: flex
+    justify-content: space-around
+    width: 100%
+
+.yellow-caps
+    text-transform: uppercase
+    color: $yellow
+    font-size: .8em
+
+.dot
+    background-color: $dark-blue
+    height: 16px
+    width: 16px
+    border-radius: 60%
+
+.dots__actual-dots-container
+    display: flex
+    justify-content: space-around
+    margin: 10px auto
+
+.line
+    position: absolute
+    height: 1px
+    width: 197px
+    margin-top: 5px
+    border: dotted $light-grey
+    border-width: 0.3em 0 0
+    z-index: -1
+
+.dots__info
+    text-transform: capitalize
+    color: $grey
+    font-size: .8em
+    max-width: 120px
+    text-align: center
+
+.dots__info-container
+    display: flex
+    justify-content: space-between
+
+.highlights__image
+    width: 131px
+    height: 103px
+    margin-left: 172px
+
+.details__heading
+    color: $dark-blue
+
+.highlights-heading
+    margin-top: -21px
+    margin-left: 25px
+
+.highlights__p
+    font-size: .8em
+    color: $grey
+
+.highlights__info-content
+    color: $grey
+    font-size: .8em
+    margin-bottom: 15px
     
-    
+.highlights__info-row
+    display: flex
+    width: 220px
+    justify-content: space-between
+
+.highlights__info-container
+    display: flex
+    width: 220px
+    justify-content: space-between
+    margin-left: 25px
+    margin-top: 20px
+
+.highlights__info-title
+    margin-bottom: 15px
+
