--- a/pages/results.pug
+++ b/pages/results.pug
@@ -1,5 +1,5 @@
 header
-    h1.results__heading 2 tours
+    h1.capitalize__heading 2 tours
     p.shifted-to-the-right.tagline 3 Adults, 2 Children, 1 Day
 
     .tour-cards-container
