front-end: details image quick-fix

--- a/style/main.sass
+++ b/style/main.sass
@@ -230,6 +230,8 @@ footer
     left: 0
     right: 0
     height: 240px
+    max-width: 375px
+    margin: 0 auto
 
 .details-tagline
     margin-bottom: 20px
