--- a/pages/details.pug
+++ b/pages/details.pug
@@ -33,9 +33,9 @@ header
                 .highlights__info-content cultural discovery
     .details__itinerary-container
         img(src="https://images.unsplash.com/photo-1471973772471-ecd9cf9eb04e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80").itinerary__image
-        .details__heading Itinerary
-        a.itinerary__download Download PDF Brochure
-        .list__expand-container
+        h3.itinerary__heading.details__heading Itinerary
+        a(href="#").itinerary__download Download PDF Brochure
+        .itinerary__list-container.list__expand-container
             .list__expand-all Expand all
             .list__item
                 .list__icon--dot
