--- a/style/main.sass
+++ b/style/main.sass
@@ -301,6 +301,7 @@ footer
     color: $grey
     font-size: .8em
     margin-bottom: 15px
+    text-transform: capitalize
     
 .highlights__info-row
     display: flex
@@ -317,3 +318,29 @@ footer
 .highlights__info-title
     margin-bottom: 15px
 
+.itinerary__heading
+    text-align: right
+
+.itinerary__image
+    width: 131px
+    height: 103px
+    margin-left: 40px
+    margin-bottom: -60px
+    margin-top: 25px
+
+.itinerary__download
+    background-color: $yellow
+    border-radius: 4px
+    color: white
+    font-size: .8em
+    padding: 3px 5px
+    position: absolute
+    right: 0
+    top: 120px
+    text-decoration: none
+
+.details__itinerary-container
+    position: relative
+
+.itinerary__list-container
+    margin-top: 50px
