--- a/style/main.sass
+++ b/style/main.sass
@@ -102,6 +102,7 @@ input:focus
 
 ::placeholder
     color: $light-grey
+    font-size: .9em
 
 
 // button
@@ -529,3 +530,26 @@ input[type=checkbox]::-ms-check
 .live-price__button
     display: flex
     align-items: center
+
+.back-link
+    color: $light-dark-blue
+    font-size: .8em
+
+.grey-caps
+    color: $grey
+    text-transform: uppercase
+
+.selected-tour-container
+    margin-top: 37px
+
+.selected-tour__item
+    margin-bottom: 16px
+
+.confirm__advanced
+    text-align: center
+
+.date-input
+    width: 221px
+
+.push-down-container
+    margin-top: 26px
