front-end: confirm updated sections spacing

--- a/pages/confirm.pug
+++ b/pages/confirm.pug
@@ -53,7 +53,7 @@ header
     .push-down-container
         input(type="date", name="date", placeholder="Preferred tour date").date-input
 
-.details__live-price.push-down-container
+.details__live-price.push-down-more-container
     .live-price__price-container
         h4.live-price__heading current total:
         h2.live-price__price BND $99
