--- a/style/main.sass
+++ b/style/main.sass
@@ -553,3 +553,6 @@ input[type=checkbox]::-ms-check
 
 .push-down-container
     margin-top: 26px
+    
+.push-down-more-container
+    margin-top: 76px
