front-end completed: finished thank you

--- a/pages/confirm.pug
+++ b/pages/confirm.pug
@@ -39,7 +39,7 @@ header
         .shifted-to-the-right.list__top-section
             .list__icon--tick
             .grey-caps.list__title your details
-    .push-down-container
+    .push-down-container.container-center-children
         input(type="text", name="name", placeholder="What is your name?")
         input(type="email", name="email", placeholder="What is your email?")
         input(type="tel", name="phone-number", placeholder="What is your phone number?")
@@ -50,7 +50,7 @@ header
         .shifted-to-the-right.list__top-section
             .list__icon--tick
             .grey-caps.list__title preferred tour date
-    .push-down-container
+    .push-down-container.container-center-children
         input(type="date", name="date", placeholder="Preferred tour date").date-input
 
 .details__live-price.push-down-more-container
