--- a/pages/home.pug
+++ b/pages/home.pug
@@ -6,7 +6,7 @@ header.home__container
             Agnecy <br/>
             Tours
         .home__hero-logo  
-    p.home__tagline.
+    p.tagline.
         You are on your way to booking a tour! <br/>
         Please fill in the details below
     .home__input-container
