--- a/index.pug
+++ b/index.pug
@@ -9,5 +9,5 @@ html(lang="en")
     body
         .mobile-container
             include components/nav
-            include pages/confirm
+            include pages/thank-you
             include components/footer
