--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -54,695 +54,8 @@ a {
 .logo {
   height: 50px;
   width: 50px;
-  background-image: url("assets/logo.png");
+  background-image: url(../assets/logo.png);
   background-position: center center;
   background-size: cover;
   text-align: center;
-}
-
-.menu-button {
-  height: 20px;
-  width: 20px;
-  background-image: url("assets/menu.svg");
-  background-position: center center;
-  background-repeat: none;
-  background-size: cover;
-}
-
-.home__hero-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-.home__hero-logo {
-  width: 150px;
-  height: 150px;
-  background-position: center center;
-  background-size: cover;
-  background-image: url("assets/big-logo.svg");
-}
-
-.home__input-container {
-  margin-top: 30px;
-}
-
-input {
-  border: none;
-  border-radius: 8px;
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  padding: 20px 30px;
-  margin-bottom: 20px;
-  -webkit-transition: all 50ms ease-in-out;
-  -o-transition: all 50ms ease-in-out;
-  transition: all 50ms ease-in-out;
-}
-
-input:focus {
-  -webkit-box-shadow: 0 3px 6px #fbb61978;
-  box-shadow: 0 3px 6px #fbb61978;
-  outline: none;
-}
-
-::-webkit-input-placeholder {
-  color: rgba(0, 0, 0, 0.2);
-  font-size: .9em;
-}
-
-:-ms-input-placeholder {
-  color: rgba(0, 0, 0, 0.2);
-  font-size: .9em;
-}
-
-::-ms-input-placeholder {
-  color: rgba(0, 0, 0, 0.2);
-  font-size: .9em;
-}
-
-::placeholder {
-  color: rgba(0, 0, 0, 0.2);
-  font-size: .9em;
-}
-
-button {
-  background-color: #FBB514;
-  border: none;
-  text-transform: uppercase;
-  color: white;
-  font-size: 1.2em;
-  padding: 14px 16px;
-  border-radius: 8px;
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  margin: 15px auto;
-}
-
-button:focus {
-  outline: none;
-  -webkit-box-shadow: 0 3px 6px #fbb61978;
-  box-shadow: 0 3px 6px #fbb61978;
-}
-
-footer {
-  margin-top: 65px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.footer__logo {
-  height: 64px;
-  width: 64px;
-  background-position: center center;
-  background-size: cover;
-  background-image: url("assets/logo.png");
-}
-
-.footer__partners-container {
-  margin-top: 35px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  font-size: .7em;
-}
-
-.footer__partners-heading {
-  text-transform: uppercase;
-  color: rgba(42, 79, 159, 0.5);
-  font-weight: bold;
-  margin: 0;
-}
-
-.footer__partners-links-container {
-  width: 170px;
-}
-
-.partners-links__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-.footer__general-links {
-  font-size: .7em;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  margin-top: 25px;
-}
-
-.footer__copyright {
-  font-size: .5em;
-  margin-top: 35px;
-  color: rgba(0, 0, 0, 0.5);
-  text-align: center;
-}
-
-.capitalize__heading {
-  margin-bottom: 5px;
-  text-transform: capitalize;
-}
-
-.tour-card {
-  width: 300px;
-  height: 165px;
-  position: relative;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.tour-card__info-container {
-  margin-left: 25px;
-  position: absolute;
-  z-index: 2;
-}
-
-.tour-card__title {
-  color: white;
-  text-transform: capitalize;
-  margin-bottom: 14px;
-  font-size: 1.2em;
-}
-
-.tour-card__push-down {
-  height: 106.5px;
-}
-
-.tour-card__bg-blur {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  z-index: 1;
-  background: black;
-  background: -webkit-gradient(linear, left bottom, left top, from(black), color-stop(31%, black), to(rgba(255, 255, 255, 0)));
-  background: -webkit-linear-gradient(bottom, black 0%, black 31%, rgba(255, 255, 255, 0) 100%);
-  background: -o-linear-gradient(bottom, black 0%, black 31%, rgba(255, 255, 255, 0) 100%);
-  background: linear-gradient(0deg, black 0%, black 31%, rgba(255, 255, 255, 0) 100%);
-}
-
-.tour-card__learn-more-button {
-  text-decoration: none;
-  color: black;
-  padding: 2.5px 14px;
-  text-transform: uppercase;
-  margin-top: 10px;
-  background-color: white;
-}
-
-.tour-card__bg-image {
-  width: 300px;
-  height: 165px;
-  position: absolute;
-  top: 0;
-}
-
-.details__big-image {
-  position: absolute;
-  left: 0;
-  right: 0;
-  height: 240px;
-  max-width: 375px;
-  margin: 0 auto;
-}
-
-.details-tagline {
-  margin-bottom: 20px;
-}
-
-.details__dots-container {
-  margin-top: 300px;
-  margin-bottom: 30px;
-}
-
-.dots__titles {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  width: 100%;
-}
-
-.yellow-caps {
-  text-transform: uppercase;
-  color: #FBB514;
-  font-size: .8em;
-}
-
-.dot {
-  background-color: #2A4F9F;
-  height: 16px;
-  width: 16px;
-  border-radius: 60%;
-}
-
-.dots__actual-dots-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  margin: 10px auto;
-}
-
-.line {
-  position: absolute;
-  height: 1px;
-  width: 197px;
-  margin-top: 5px;
-  border: dotted rgba(0, 0, 0, 0.2);
-  border-width: 0.3em 0 0;
-  z-index: -1;
-}
-
-.dots__info {
-  text-transform: capitalize;
-  color: #707070;
-  font-size: .8em;
-  max-width: 120px;
-  text-align: center;
-}
-
-.dots__info-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-.highlights__image {
-  width: 131px;
-  height: 103px;
-  margin-left: 172px;
-}
-
-.details__heading {
-  color: #2A4F9F;
-  text-transform: capitalize;
-}
-
-.highlights-heading {
-  margin-top: -21px;
-  margin-left: 25px;
-}
-
-.highlights__p {
-  font-size: .8em;
-  color: #707070;
-}
-
-.highlights__info-content {
-  color: #707070;
-  font-size: .8em;
-  margin-bottom: 15px;
-  text-transform: capitalize;
-}
-
-.highlights__info-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 220px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-.highlights__info-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 220px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-left: 25px;
-  margin-top: 20px;
-}
-
-.highlights__info-title {
-  margin-bottom: 15px;
-}
-
-.itinerary__heading {
-  text-align: right;
-}
-
-.itinerary__image {
-  width: 131px;
-  height: 103px;
-  margin-left: 40px;
-  margin-bottom: -60px;
-  margin-top: 25px;
-}
-
-.itinerary__download {
-  background-color: #FBB514;
-  border-radius: 4px;
-  color: white;
-  font-size: .8em;
-  padding: 3px 5px;
-  position: absolute;
-  right: 0;
-  top: 120px;
-  text-decoration: none;
-}
-
-.details__itinerary-container {
-  position: relative;
-}
-
-.itinerary__list-container {
-  margin-top: 50px;
-}
-
-.list__expand-all {
-  background: none;
-  color: #707070;
-  text-decoration: underline;
-  font-size: .7em;
-  text-align: right;
-  margin-bottom: 15px;
-  cursor: pointer;
-}
-
-.list__icon--dot {
-  background: #2A4F9F;
-  height: 10px;
-  width: 10px;
-  border-radius: 60%;
-  margin-top: 3px;
-}
-
-.list__title {
-  text-transform: capitalize;
-  font-size: 0.8em;
-  -webkit-box-flex: 3;
-  -ms-flex-positive: 3;
-  flex-grow: 3;
-  margin-left: 10px;
-  margin-top: 3px;
-}
-
-.list__expand-arrow {
-  height: 15px;
-  width: 15px;
-  background-image: url("assets/arrow.svg");
-  background-position: center center;
-  background-size: fit;
-  background-repeat: no-repeat;
-}
-
-.list__top-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.list__description {
-  color: #707070;
-  font-size: .8em;
-  margin-top: 10px;
-  margin-left: 20px;
-}
-
-.included__heading, .not-included__heading {
-  margin-top: 40px;
-}
-
-.list__icon--tick {
-  height: 15px;
-  width: 15px;
-  background-image: url("assets/tick.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 0 -1px;
-}
-
-.list__icon--cross {
-  height: 13px;
-  width: 13px;
-  background-image: url("assets/cross.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-.list__item {
-  margin-bottom: 10px;
-}
-
-.details__image-grid {
-  margin-top: 45px;
-  position: relative;
-}
-
-.image-grid__one {
-  margin-top: 15px;
-  height: 156px;
-  width: 234px;
-  position: absolute;
-  left: -38px;
-}
-
-.image-grid__two {
-  height: 128px;
-  width: 141px;
-  position: absolute;
-  right: -37px;
-}
-
-.image-grid__three {
-  height: 95px;
-  width: 141px;
-  margin-top: 128px;
-  position: absolute;
-  right: -37px;
-}
-
-.image-grid__four {
-  height: 63px;
-  width: 85px;
-  margin-left: 111px;
-  margin-top: 171px;
-}
-
-.advanced__heading {
-  margin-top: 35px;
-}
-
-.advanced__options-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 76px;
-  margin-top: 20px;
-}
-
-.advanced-option {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
-  color: #707070;
-  font-size: 0.8em;
-}
-
-input[type=checkbox] {
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  height: 2.4em;
-  width: 2.4em;
-  background: white;
-  border: 2px solid #707070;
-  border-radius: 100%;
-  margin-bottom: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-input[type=checkbox]::before {
-  content: "✔";
-  font-size: 1.2em;
-  right: 0;
-  top: -0.3em;
-  visibility: hidden;
-  color: #707070;
-}
-
-input[type=checkbox]:checked::before {
-  /* Use `visibility` instead of `display` to avoid recalculating layout */
-  visibility: visible;
-}
-
-input[type=checkbox]::-ms-check {
-  display: none;
-}
-
-.details__live-price {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.live-price__heading {
-  font-size: 1.1em;
-  text-transform: capitalize;
-  color: #2A4F9F;
-  margin-bottom: 0;
-  margin-top: 30px;
-}
-
-.live-price__price {
-  font-weight: 500;
-  font-size: 1.9em;
-  color: #2A4F9F;
-  margin-top: 0;
-}
-
-.live-price__button {
-  width: 145px;
-  padding-left: 0;
-  margin-right: 0;
-}
-
-.live-price-button__icon {
-  height: 30px;
-  width: 30px;
-  background-image: url("assets/right-arrow.svg");
-  background-position: center center;
-  background-size: cover;
-}
-
-.live-price__button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.back-link {
-  color: rgba(42, 79, 159, 0.5);
-  font-size: .8em;
-}
-
-.grey-caps {
-  color: #707070;
-  text-transform: uppercase;
-  cursor: default;
-}
-
-.selected-tour-container {
-  margin-top: 37px;
-}
-
-.selected-tour__item {
-  margin-bottom: 16px;
-}
-
-.confirm__advanced {
-  text-align: center;
-}
-
-.push-down-container {
-  margin-top: 26px;
-}
-
-.container-center-children {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.push-down-more-container {
-  margin-top: 76px;
-}
-
-.thank-you__tagline {
-  font-size: .6em;
-  max-width: 120px;
-}
-
-.thank-you__logo {
-  width: 187px;
-  height: 187px;
-  background-image: url("assets/big-logo.svg");
-  background-position: center center;
-  background-size: cover;
-  margin-left: 111px;
-  margin-top: -64px;
-  margin-bottom: 86px;
 }
