--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -59,3 +59,61 @@ a {
   background-size: cover;
   text-align: center;
 }
+
+input {
+  border: none;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  padding: 20px 30px;
+  margin-bottom: 20px;
+  -webkit-transition: all 50ms ease-in-out;
+  -o-transition: all 50ms ease-in-out;
+  transition: all 50ms ease-in-out;
+}
+
+input:focus {
+  -webkit-box-shadow: 0 3px 6px #fbb61978;
+  box-shadow: 0 3px 6px #fbb61978;
+  outline: none;
+}
+
+::-webkit-input-placeholder {
+  color: rgba(0, 0, 0, 0.2);
+  font-size: .9em;
+}
+
+:-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0.2);
+  font-size: .9em;
+}
+
+::-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0.2);
+  font-size: .9em;
+}
+
+::placeholder {
+  color: rgba(0, 0, 0, 0.2);
+  font-size: .9em;
+}
+
+button {
+  background-color: #FBB514;
+  border: none;
+  text-transform: uppercase;
+  color: white;
+  font-size: 1.2em;
+  padding: 14px 16px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  margin: 15px auto;
+}
+
+button:focus {
+  outline: none;
+  -webkit-box-shadow: 0 3px 6px #fbb61978;
+  box-shadow: 0 3px 6px #fbb61978;
+}
