--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -125,3 +125,14 @@ button[disabled] {
   cursor: not-allowed;
   background: #707070;
 }
+
+.capitalize__heading {
+  margin-bottom: 5px;
+  text-transform: capitalize;
+}
+
+.yellow-caps {
+  text-transform: uppercase;
+  color: #FBB514;
+  font-size: .8em;
+}
