--- a/src/components/details.module.css
+++ b/src/components/details.module.css
@@ -74,7 +74,8 @@
 
 .highlights__image {
   width: 131px;
-  height: 103px;
+  height: 
+  103px;
   margin-left: 172px;
 }
 
@@ -84,8 +85,8 @@
 }
 
 .highlights-heading {
-  margin-top: -21px;
-  margin-left: 25px;
+  margin-top: 0;
+  margin-left: 0;
 }
 
 .highlights__p {
@@ -119,8 +120,9 @@
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-left: 25px;
+  /* margin-left: 25px; */
   margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .highlights__info-title {
@@ -128,7 +130,7 @@
 }
 
 .itinerary__heading {
-  text-align: right;
+  text-align: left;
 }
 
 .itinerary__image {
@@ -145,18 +147,22 @@
   color: white;
   font-size: .8em;
   padding: 3px 5px;
-  position: absolute;
-  right: 0;
-  top: 120px;
   text-decoration: none;
+}
+
+.itinerary__heading-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .details__itinerary-container {
   position: relative;
+  margin-top: 300px;
 }
 
 .itinerary__list-container {
-  margin-top: 50px;
+  margin-top: 15px;
 }
 
 .included__heading, .not-included__heading {
