--- a/src/components/block.module.css
+++ b/src/components/block.module.css
@@ -7,11 +7,11 @@
 .block {
     display: grid;
     padding: 20px 40px;
+    border-radius: 0 20px 20px 0;
 }
 
 .block:nth-child(2n+3) {
-    background: black;
-    color: white;
+    background: #87cfec;
 }
 
 .block__title {
