--- a/src/components/flyerHeader.module.css
+++ b/src/components/flyerHeader.module.css
@@ -1,6 +1,6 @@
 .header__container {
     padding: 40px 20px;
-    background: black;
+    background: #87cfec;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -30,4 +30,6 @@
 
 .header__desc {
     font-size: 15px;
+    color: black;
+    text-align: justify;
 }
