update version 1 styles

--- a/src/components/flyerQuickInfo.module.css
+++ b/src/components/flyerQuickInfo.module.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 20px;
+    max-width: 90%;
+    margin: 20px auto;
 }
 
 .quickinfo__item-icon {
