--- a/src/components/flyerTop.module.css
+++ b/src/components/flyerTop.module.css
@@ -15,13 +15,14 @@
     background-image: url(../assets/logo.png);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
 }
 
 .letterhead__company-name {
     text-transform: uppercase;
     font-weight: bold;
+    font-size: 1.4em;
 }
 
 p {
