update for header styles

--- a/src/components/flyerHeader.module.css
+++ b/src/components/flyerHeader.module.css
@@ -3,7 +3,7 @@
     background: #87cfec;
     color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 40px;
 }
