--- a/src/components/flyerTop.module.css
+++ b/src/components/flyerTop.module.css
@@ -15,20 +15,16 @@
     background-image: url(../assets/logo.png);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 130px;
-    height: 130px;
+    width: 100px;
+    height: 100px;
 }
 
 .letterhead__company-name {
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 1.4em;
+    font-size: 15px;
 }
 
-p {
-    margin: .5em;
-    font-size: .7em;
-}
 
 .price__container {
     background: #364893;
@@ -38,7 +34,7 @@ p {
 }
 
 .price__text {
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .pricedesc {
@@ -49,7 +45,7 @@ p {
     text-align: center;
     text-transform: uppercase;
     color: #87cfec;
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 10px;
     margin-top: 10px;
 }
@@ -61,17 +57,17 @@ p {
 .arrow {
   width: 0; 
   height: 0; 
-  border-left: 60px solid transparent;
-  border-right: 60px solid transparent;
-  border-top: 40px solid #364893;
-  margin: 0 auto;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-top: 20px solid #364893;
+  margin: -2px auto;
 }
 
 .tourcode {
    text-transform: uppercase;
    color: black;
    text-align: center;
-   font-size: 20px;
+   font-size: 15px;
    margin-top: 0;
    font-weight: bold; 
 }
