blue color update

--- a/src/components/details.module.css
+++ b/src/components/details.module.css
@@ -30,7 +30,7 @@
 }
 
 .dot {
-  background-color: #2A4F9F;
+  background-color: #156c88;
   height: 16px;
   width: 16px;
   border-radius: 60%;
@@ -80,7 +80,7 @@
 }
 
 .details__heading {
-  color: #2A4F9F;
+  color: #156c88;
   text-transform: capitalize;
 }
 
@@ -300,7 +300,7 @@ input[type=checkbox]::-ms-check {
 .live-price__heading {
   font-size: 1.1em;
   text-transform: capitalize;
-  color: #2A4F9F;
+  color: #156c88;
   margin-bottom: 0;
   margin-top: 30px;
 }
@@ -308,7 +308,7 @@ input[type=checkbox]::-ms-check {
 .live-price__price {
   font-weight: 500;
   font-size: 1.9em;
-  color: #2A4F9F;
+  color: #156c88;
   margin-top: 0;
 }
 
