--- a/src/components/tour-card.module.css
+++ b/src/components/tour-card.module.css
@@ -3,7 +3,7 @@
   height: 165px;
   position: relative;
   background-color: rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
+  margin: 20px;
 }
 
 .tour-card__info-container {
