--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,72 +1,116 @@
 footer {
-  margin-top: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  background-color: #156C88;
+  color: white;
+  padding: 40px 0; }
+
+.logo {
+  height: 100px;
+  width: 100px;
+  background-image: url(../assets/images/white-grace-travel-logo.png);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.container {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+}
+
+.links__header {
+  text-transform: capitalize;
+}
+
+.links__container {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.link {
+  display: block;
+  color: white;
+  text-transform: capitalize;
+  margin-bottom: 16px;
+}
+
+.blue_button {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  background-color: #4AC0EE;
+  padding: 8px 40px;
+  display: block;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  -webkit-transition: -webkit-transform 100ms ease-in-out;
+  transition: -webkit-transform 100ms ease-in-out;
+  -o-transition: transform 100ms ease-in-out;
+  transition: transform 100ms ease-in-out;
+  transition: transform 100ms ease-in-out, -webkit-transform 100ms ease-in-out; }
+  .blue_button:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1); }
+
+  
+.icon__fb {
+  height: 35px;
+  width: 35px;
+  background-image: url(../assets/icons/fb-white.svg);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+  display: block;
+}
+
+.icon__ig {
+  height: 35px;
+  width: 35px;
+  background-image: url(../assets/icons/ig-white.svg);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+  display: block;
+  margin-left: 20px;
+}
+
+.icons__container {
+  display: flex;
+  margin: 20px 0;
+  justify-content: center;
   align-items: center;
 }
 
-.footer__logo {
-  height: 64px;
-  width: 64px;
-  background-position: center center;
-  background-size: cover;
-  background-image: url(../assets/logo.png);
-}
-
-.footer__partners-container {
-  margin-top: 35px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  font-size: .7em;
-}
-
-.footer__partners-heading {
-  text-transform: uppercase;
-  color: rgba(42, 79, 159, 0.5);
-  font-weight: bold;
-  margin: 0;
-}
-
-.footer__partners-links-container {
-  width: 210px;
-}
-
-.partners-links__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-.footer__general-links {
-  font-size: .7em;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  margin-top: 25px;
-}
-
-.footer__copyright {
-  font-size: .5em;
-  margin-top: 35px;
-  color: rgba(0, 0, 0, 0.5);
+.copy {
+  font-size: .8em;
+  margin: 60px 0 0 0;
   text-align: center;
+}
+
+.social__header {
+  font-weight: 400;
+}
+
+
+@media only screen and (min-width: 1220px) {
+  .container {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .links__header {
+    margin-top: 0;
+  }
+
+  .social__header {
+    margin-top: 0;
+  }
+
+  .links__container {
+    text-align: left;
+    margin: 0 40px;
+  }
 }
